--- a/TestDriveKaro/templates/basic.html
+++ b/TestDriveKaro/templates/basic.html
@@ -1,50 +1,583 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="{% static 'img/loogo.png' %}" type="image/x-icon">
-    <link rel="stylesheet" href="{% static 'css/basic.css' %}">
+    <link rel="shortcut icon" href="{% static 'img/logo2.gif' %}" type="image/x-icon">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        
+        .container {
+            text-align: right;
+            position: absolute;
+            width: 100%;
+            z-index: 2;
+            color: black;
+            font-weight: bold;
+            /* Fallback color */
+            /* Black w/opacity/see-through */
+        }
+        
+        .back {
+            background-color: rgba(192, 192, 192, 0.884);
+            text-align: center;
+            height: auto;
+            width: 100%;
+            margin-bottom: 3%;
+        }
+        
+        .bg-text {
+            position: absolute;
+        }
+        /* The navbar */
+        
+        .topnav {
+            overflow: hidden;
+        }
+        /* Navbar links */
+        
+        .topnav .b {
+            float: left;
+            color: white;
+            text-align: end;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 16px;
+        }
+        
+        .topnav .b:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        
+        .topnav .icon {
+            display: none;
+        }
+        
+        .flo {
+            float: left;
+            font-size: 18px;
+        }
+        
+        .footer-basic {
+            padding: 40px 0;
+            color: #fff;
+            background-color: #000;
+            opacity: 70%;
+            backdrop-filter: blur(8px);
+        }
+        
+        .footer-basic ul {
+            padding: 0;
+            list-style: none;
+            text-align: center;
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 0;
+        }
+        
+        .footer-basic li {
+            padding: 0 10px;
+        }
+        
+        .footer-basic ul a {
+            color: inherit;
+            text-decoration: none;
+            opacity: 10;
+        }
+        
+        .footer-basic ul a:hover {
+            color: yellow;
+        }
+        
+        .footer-basic .social {
+            text-align: center;
+            padding-bottom: 25px;
+        }
+        
+        .footer-basic .social>a {
+            font-size: 24px;
+            width: 40px;
+            height: 40px;
+            line-height: 40px;
+            display: inline-block;
+            text-align: center;
+            border-radius: 50%;
+            border: 1px solid #ccc;
+            margin: 0 8px;
+            color: inherit;
+            opacity: 0.75;
+        }
+        
+        .footer-basic .social>a:hover {
+            opacity: 1;
+            color: darkgreen;
+        }
+        
+        .footer-basic .copyright {
+            margin-top: 15px;
+            text-align: center;
+            font-size: 13px;
+            color: #aaa;
+            margin-bottom: 0;
+        }
+        /* Create a sticky/fixed navbar */
+        
+        .imgs {
+            /* The image used */
+            /* The image used */
+            background-image: url("{% static 'img/header5.jpg' %}");
+            /* Set a specific height */
+            min-height: 500px;
+            /* Create the parallax scrolling effect */
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 100%;
+            height: auto;
+        }
+        
+        #navbar {
+            /* Center and scale the image nicely */
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            /* Needed to position the navbar */
+            transition: 00.4s;
+        }
+        
+        .c {
+            float: left;
+            color: white;
+            text-align: center;
+            padding: 12px;
+            text-decoration: none;
+            font-size: 18px;
+            line-height: 25px;
+            border-radius: 4px;
+        }
+        /* Style the logo */
+        
+        #navbar #logo {
+            font-size: 35px;
+            font-weight: bold;
+            transition: 0.4s;
+        }
+        /* Links on mouse-over */
+        
+        .c:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        /* Style the active/current link */
+        
+        .c.active {
+            background-color: dodgerblue;
+            color: white;
+        }
+        /* Display some links to the right */
+        
+        #navbar-right {
+            float: right;
+        }
+        /* Add responsiveness - on screens less than 580px wide, display the navbar vertically instead of horizontally */
+        
+        @media screen and (max-width: 580px) {
+            #navbar {
+                padding: 0px 10px !important;
+                /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
+            }
+            #navbar c {
+                float: none;
+                display: inline-block;
+                text-align: left;
+            }
+            #navbar-right {
+                float: none;
+            }
+        }
+        
+        @media screen and (max-width: 600px) {
+            .topnav a:not(:first-child) {
+                display: none;
+            }
+            .topnav a.icon {
+                float: right;
+                display: block;
+            }
+        }
+        
+        @media screen and (max-width: 600px) {
+            .topnav.responsive {
+                position: relative;
+            }
+            .topnav.responsive .icon {
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+            .topnav.responsive a {
+                float: none;
+                display: block;
+                text-align: left;
+            }
+        }
+        
+        @media screen and (min-width:761px) {
+            .back {
+                background-color: rgba(192, 192, 192, 0.884);
+                text-align: center;
+                height: auto;
+                width: 100%;
+            }
+            .sel {
+                color: black;
+                font-size: 2.5rem;
+                display: inline-block;
+                margin: 9px 3px;
+                width: 200px;
+                position: relative;
+                cursor: pointer;
+                border-radius: 5%;
+                border: none;
+            }
+        }
+        
+        @media screen and (max-width:760px) {
+            .back {
+                background-color: rgba(192, 192, 192, 0.884);
+                text-align: center;
+                height: auto;
+                width: 100%;
+            }
+            .sel {
+                color: black;
+                font-size: 2.5rem;
+                display: inline-block;
+                margin: 9px 3px;
+                width: 200px;
+                position: relative;
+                cursor: pointer;
+                border-radius: 5%;
+                border: none;
+            }
+            .sels {
+                color: black;
+            }
+        }
+        
+        @media screen and (max-width:480px) {
+            .back {
+                background-color: rgba(192, 192, 192, 0.884);
+                text-align: center;
+                height: auto;
+                width: 100%;
+            }
+            .sel {
+                color: black;
+                font-size: 2.5rem;
+                display: inline-block;
+                margin: 9px 3px;
+                width: 200px;
+                position: relative;
+                cursor: pointer;
+                border-radius: 5%;
+                border: none;
+            }
+            .sels {
+                color: black;
+            }
+        }
+        
+        @media screen and (max-width:360px) {
+            .back {
+                background-color: rgba(192, 192, 192, 0.884);
+                text-align: center;
+                height: auto;
+                width: 100%;
+            }
+            .sel {
+                color: black;
+                font-size: 2.5rem;
+                display: inline-block;
+                margin: 9px 3px;
+                width: 200px;
+                position: relative;
+                cursor: pointer;
+                border-radius: 5%;
+                border: none;
+            }
+            .sels {
+                color: black;
+            }
+        }
+        
+        .lin {
+            border-left: 2px solid white;
+            border-right: 2px solid white;
+            opacity: 90%;
+        }
+        
+        .set {
+            width: 100%;
+            height: 50px;
+        }
+        
+        .sty {
+            width: 100px;
+            border-radius: 5px;
+            height: auto;
+            margin-top: 10%;
+        }
+        
+        .left:hover {
+            color: rgb(255, 0, 0);
+        }
+        
+        .colo {
+            background-color: silver;
+            height: auto;
+            align-items: center;
+            min-height: 50px;
+            width: 98%;
+            margin: 1%;
+        }
+        
+        .sub {
+            width: 150px;
+            border-radius: 5px;
+            height: auto;
+            margin-left: 100px;
+            margin-top: 1%;
+        }
+        
+        .sub:hover {
+            background-color: seagreen;
+            color: blue
+        }
+        
+        .lefts {
+            margin-left: -70%;
+            width: 150px;
+            height: 30px;
+        }
+        
+        .left {
+            margin-right: 10%;
+            width: 150px;
+            height: 30px;
+            border-radius: 5px;
+            margin-top: 10%;
+        }
+        
+        .le {
+            width: 75px;
+            height: 30px;
+            border-radius: 5px;
+            margin-top: 1%;
+        }
+        
+        .le:hover {
+            background-color: white;
+            color: yellowgreen
+        }
+        /* ===== Resets and Housekeeping ===== */
+        /* ===== Actual Styles ===== */
+        /* ===== Horizontal Rule ===== */
+        /* ===== Select Box ===== */
+        
+        .sel {
+            font-size: 2.5rem;
+            display: inline-block;
+            margin: 9px 3px;
+            width: 200px;
+            position: relative;
+            cursor: pointer;
+            border-radius: 5%;
+            color: rgb(51, 50, 50);
+            border-top: 1px solid rgb(109, 108, 108);
+            border-bottom: 1px solid rgb(109, 108, 108);
+        }
+        
+        .sels {
+            font-size: 2.5rem;
+            display: inline-block;
+            margin: 9px 3px;
+            width: auto;
+            position: relative;
+            cursor: pointer;
+            border-radius: 10%;
+            color: silver;
+        }
+        
+        .sel.active::before {
+            transform: rotateX(-180deg);
+        }
+        
+        .sel.active::after {
+            transform: rotateX(360deg);
+        }
+        
+        .sel:hover {
+            border-top: 3px solid rgba(34, 152, 198, 255);
+            background-color: white;
+            box-shadow: 0 1px 2px silver;
+            color: rgba(34, 152, 198, 255);
+        }
+        
+        .sel__placeholder {
+            display: block;
+            font-family: 'Quicksand';
+            font-size: 2.3em;
+            color: #838e95;
+            padding: 0.2em 0.5em;
+            text-align: left;
+            pointer-events: none;
+            user-select: none;
+            visibility: visible;
+        }
+        
+        .sel.active .sel__placeholder {
+            visibility: hidden;
+        }
+        
+        .sel__placeholder::before {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 0.2em 0.5em;
+            content: attr(data-placeholder);
+            visibility: hidden;
+        }
+        
+        .sel.active .sel__placeholder::before {
+            visibility: visible;
+        }
+        
+        .sel__box {
+            position: absolute;
+            top: calc(100% + 4px);
+            left: -4px;
+            display: none;
+            list-style-type: none;
+            text-align: left;
+            font-size: 1em;
+            background-color: #FFF;
+            width: calc(100% + 8px);
+            box-sizing: border-box;
+        }
+        
+        .sel.active .sel__box {
+            display: block;
+            animation: fadeInUp 500ms;
+        }
+        
+        .sel__box__options::after {
+            content: '\f00c';
+            font-family: 'FontAwesome';
+            font-size: 0.5em;
+            margin-left: 5px;
+            display: none;
+        }
+        
+        .sel__box__options.selected::after {
+            display: inline;
+        }
+        
+        .sel__box__options:hover {
+            background-color: #ebedef;
+        }
+        /* ----- Select Box Superman ----- */
+        
+        .sel--superman {
+            /*   display: none; */
+            z-index: 2;
+        }
+        /* ===== Keyframes ===== */
+        
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translate3d(0, 20px, 0);
+            }
+            to {
+                opacity: 1;
+                transform: none;
+            }
+        }
+        
+        @keyframes fadeOut {
+            from {
+                opacity: 1;
+            }
+            to {
+                opacity: 0;
+            }
+        }
+        
+        .k {
+            color: black;
+            border-radius: 5%;
+            padding-left: 10px;
+            font-family: inherit;
+        }
+        
+        .k:hover {
+            background-color: rgba(23, 128, 175, 255);
+            color: white;
+        }
+        
+        .j {
+            background-color: silver;
+        }
+    </style>
     <title>{% block title %} {% endblock %}</title>
 </head>
 
 <body>
+
     <nav>
-        <div class="imgs">
 
+        <div id="navbar">
+            <div class="container">
 
-            <div id="navbar">
-                <div class="container">
+                <div class="topnav ok" id="myTopnav">
                     <a class="flo" id="logo" href="#home"><img src="{% static 'img/logo2.gif' %}" height="80px" alt="" srcset=""></a>
 
-                    <div class="topnav">
-
-                        <a class="b" href="ind">Home</a>
-                        <a class="b" href="about">About</a>
-                        <a class="b" href="topbrand">Top Brands</a>
-                        <a class="b" href="luxury">Luxury</a>
-                        <a class="b" href="topchoice">Top Choice</a>
-                        <a class="b" href="featuredcar">Featured Car</a>
-                        <a class="b" href="royal">Royal Enfield</a>
-                        <a class="b" href="contact">Contact</a>
-
-                    </div>
+                    <a class="b" href="ind">Home</a>
+                    <a class="b" href="about">About</a>
+                    <a class="b" href="topbrand">Top Brands</a>
+                    <a class="b" href="luxury">Luxury</a>
+                    <a class="b" href="topchoice">Top Choice</a>
+                    <a class="b" href="featuredcar">Featured Car</a>
+                    <a class="b" href="royal">Royal Enfield</a>
+                    <a class="b" href="contact">Contact</a>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
+                    </a>
                 </div>
             </div>
         </div>
-        </div>
 
     </nav>
+
+    <div class="imgs"></div>
+    {% block body %} {% endblock %}
     <div class="lin">
 
-        {% block body %} {% endblock %}
     </div>
     <div class="footer-basic">
         <footer>
@@ -65,33 +598,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script>
-            $(document).ready(function() {
-                // Add smooth scrolling to all links
-                $("a").on('click', function(event) {
 
-                    // Make sure this.hash has a value before overriding default behavior
-                    if (this.hash !== "") {
-                        // Prevent default anchor click behavior
-                        event.preventDefault();
 
-                        // Store hash
-                        var hash = this.hash;
 
-                        // Using jQuery's animate() method to add smooth page scroll
-                        // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-                        $('html, body').animate({
-                            scrollTop: $(hash).offset().top
-                        }, 800, function() {
-
-                            // Add hash (#) to URL when done scrolling (default click behavior)
-                            window.location.hash = hash;
-                        });
-                    } // End if
-                });
-            });
-        </script>
-        <script src="{% static 'js/main.js' %}"></script>
 </body>
 
 </html>
