everything ok bro

--- a/TestDriveKaro/templates/index.html
+++ b/TestDriveKaro/templates/index.html
@@ -74,8 +74,7 @@
         
         .containers .topnav a {
             font-size: 1.5rem;
-            padding: 5px;
-            border-left: 2px solid white;
+            padding: 2.5rem;
             text-decoration: none;
             color: white;
             height: max-content;
@@ -598,6 +597,7 @@
         .slick-slide img {
             width: 100%;
             height: 100%;
+            cursor: pointer;
         }
         
         .slick-prev:before,
@@ -620,7 +620,8 @@
         
         span {
             text-align: center;
-            color: blue;
+            font-size: 1.7rem;
+            color: rgb(0, 132, 255);
         }
     </style>
 
@@ -794,16 +795,12 @@
 
 
                 <div class="topnav ok" id="myTopnav">
-
                     <a class="b" href="ind">Home</a>
-                    <a class="b" href="about">About</a>
                     <a class="b" href="topbrand">Top Brands</a>
                     <a class="b" href="luxury">Luxury</a>
                     <a class="b" href="topchoice">Top Choice</a>
                     <a class="b" href="featuredcar">Featured Car</a>
                     <a class="b" href="royal">Royal Enfield</a>
-                    <a class="b" href="contact">Contact</a>
-
                 </div>
                 <div class="bt">
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -1077,7 +1074,7 @@
 
     <script>
         /* When the user clicks on the button,
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            toggle between hiding and showing the dropdown content */
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    toggle between hiding and showing the dropdown content */
         function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
         }
