--- a/TestDriveKaro/templates/contact.html
+++ b/TestDriveKaro/templates/contact.html
@@ -80,26 +80,26 @@
 {% extends 'basic.html' %}{% block title %} Contacts {% endblock %} {% block body %}
 <section class="get-in-touch">
     <h1 class="title">Get in touch</h1>
-    <form class="contact-form row" action="#" method="post">
+    <form class="contact-form row" action="contact" method="post">
         {% csrf_token %}
         <div class="form-field col-lg-6">
-            <input id="name" class="input-text js-input" type="text" required>
+            <input name="name" id="name" class="input-text js-input" type="text" required>
             <label class="label" for="name">Name</label>
         </div>
         <div class="form-field col-lg-6 ">
-            <input id="email" class="input-text js-input" type="email" required>
+            <input name="email" id="email" class="input-text js-input" type="email" required>
             <label class="label" for="email">E-mail</label>
         </div>
         <div class="form-field col-lg-6 ">
-            <input id="company" class="input-text js-input" type="text" required>
-            <label class="label" for="company">Company Name</label>
+            <input name="subject" id="company" class="input-text js-input" type="text" required>
+            <label class="label" for="company">Subject</label>
         </div>
         <div class="form-field col-lg-6 ">
-            <input id="phone" class="input-text js-input" type="text" required>
+            <input name="phono" id="phone" class="input-text js-input" type="text" required>
             <label class="label" for="phone">Contact Number</label>
         </div>
         <div class="form-field col-lg-12">
-            <input id="message" class="input-text js-input" type="text" required>
+            <input name="message" id="message" class="input-text js-input" type="text" required>
             <label class="label" for="message">Message</label>
         </div>
         <div class="form-field col-lg-12">
